--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,53 @@
+body {
+100vh
+}
+
+
 .top {
     background-color: #1f2937;
     color: white;
-}
-ul {
-    list-style: none;
-    
-}
-a {
-    text-decoration: none;
-    color: white;
+    padding-bottom: 50px;
 }
 
-.middle {
+.header {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    font-size: 18px;
+    font-family: #e5e7eb;
+    margin-left: 150px;
+}
 
+
+.opening {
+    display: flex;
+    margin-left: 150px;
+    gap: 1rem
+}
+#placeholderone {
+    width: 400px;
+    height: 200px;
+    margin-left: auto;
+    padding-right: 10px;
+  
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    margin-bottom: 100px;
+}
+
+#infoheader{
+font-size: 36px;    
+font-weight: bolder;
+color: #1f2937;
 }
 
 .mid2 {
     background-color: #e5e7eb;
+    padding: 100px;
 }
 .call {
     background-color: #3882f6;
@@ -24,4 +55,21 @@ a {
 button{
     color: white;
     background-color: #3882f6;
+    padding: 5px;
+    width: 100px;
+    border-radius: 5px;
+    border: none;
+    font-weight: bold;
+    font-size: 15px;
 }
+
+ul {
+    list-style: none;
+    display: flex;
+    gap: 1rem; 
+padding-right: 5px; 
+}
+a {
+    text-decoration: none;
+    color: white;   }
+
