--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,17 @@
+html, body { margin: 0; padding: 0; } 
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 100%;
+    max-height: 100%;
+    font-family: 'Roboto', sans-serif;
+}
 
 .top {
     background-color: #1f2937;
     color: white;
-    padding-bottom: 50px;
+    padding-bottom: 100px;
     
 }
 
@@ -14,6 +23,15 @@
     font-family: #e5e7eb;
     margin-left: 150px;
 }
+.footer {
+    display: flex;
+    margin-top: auto;
+    justify-content: center;
+    background-color: #1f2937;
+    color: white;
+    height: 100px;
+    align-items: center;
+}
 
 
 .opening {
@@ -24,7 +42,7 @@
 #placeholderone {
     width: 400px;
     height: 200px;
-    margin-left: auto;
+    margin-left: 20px;
     padding-right: 10px;
   
 }
@@ -58,12 +76,34 @@ img.blue {
     background-color: #e5e7eb;
     padding: 100px;
     text-align: center;
+    font-size: 36px;
+    color: #1f2937;
 }
 .call {
     background-color: #3882f6;
     max-width: 70%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    border-radius: 10px;
+    display: flex;
+    padding:  10px 100px;
+    align-items: center;
+    color:  white;
+    
+
+    
+}
+#bottomb {
+    margin-left: 400px;
+    border: 2px solid white;
+    height: auto;
+    width: 100px;
+    border-radius: 15px;
+    margin-right: 50px;
+    
+    
 }
 button{
     color: white;
@@ -80,7 +120,7 @@ ul {
     list-style: none;
     display: flex;
     gap: 1rem; 
-    padding-right: 5px; 
+    margin-right: 150px;
 }
 a {
     text-decoration: none;
